ghc-4335c07/testsuite/tests/indexed-types/should_fail/T9580a.hs
{-# LANGUAGE KindSignatures, TypeFamilies #-}
module T9580a( Dimensional ) where

data family Dimensional var :: * -> *
newtype instance Dimensional Int v = Quantity' v
